Gap between New arrivals and trying to fix padding/margins for best seller

--- a/style/styles.css
+++ b/style/styles.css
@@ -201,17 +201,10 @@ body {
   margin-top: 30px;
 }
 
-.arrivals-card-margin {
-  margin-left: 0px;
-}
-
-.arrivals-card-margin2 {
-  margin-right: 30px;
-}
 
 .arrivals-center {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
@@ -452,7 +445,7 @@ body {
 
   .arrivals-card-margin2 {
     margin-right: 0px;
-    margin-top: 75px;
+    margin-top: 100px;
   }
 
   .best-card-margin {
